--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section id="about">
           <div class="grid grid-pad">
             <div class="col-1-1">
-              <div class="content"><a href="#header"><i class="fa fa-arrow-up" aria-hidden="true"></i></a></div>
+              <div class="content spec"><a href="#header"><i class="fa fa-arrow-up" aria-hidden="true"></i></a></div>
             </div>
             <h3 class="section-title">About us</h3>
             <div class="col-8-12">
@@ -51,7 +51,7 @@
         <section id="inventing">
           <div class="grid grid-pad">
             <div class="col-1-1">
-              <div class="content"><a href="#header"><i class="fa fa-arrow-up" aria-hidden="true"></i></a></div>
+              <div class="content spec"><a href="#header"><i class="fa fa-arrow-up" aria-hidden="true"></i></a></div>
             </div>
             <h3 class="section-title">Innovation</h3>
             <div class="col-1-1">
@@ -68,7 +68,7 @@
         <section id="products">
           <div class="grid grid-pad">
             <div class="col-1-1">
-              <div class="content"><a href="#header"><i class="fa fa-arrow-up" aria-hidden="true"></i></a></div>
+              <div class="content spec"><a href="#header"><i class="fa fa-arrow-up" aria-hidden="true"></i></a></div>
             </div>
             <h3 class="section-title">Products</h3>
             <div class="col-8-12">
